deploy/k8s/05-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sophistry-api
  namespace: sophistry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sophistry-api
  template:
    metadata:
      labels:
        app: sophistry-api
    spec:
      containers:
        - name: worker
          image: briankmatheson/sophistry-worker:0.9.15
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sophistry-api
  namespace: sophistry
spec:
  selector:
    app: sophistry-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
