deploy/k8s/05-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sophistry-web
  namespace: sophistry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sophistry-web
  template:
    metadata:
      labels:
        app: sophistry-web
    spec:
      containers:
        - name: web
          image: briankmatheson/sophistry-web:0.9.20
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sophistry-web
  namespace: sophistry
spec:
  selector:
    app: sophistry-web
  ports:
    - port: 80
      targetPort: 80
