deploy/k8s/06-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sophistry-worker
  namespace: sophistry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sophistry-worker
  template:
    metadata:
      labels:
        app: sophistry-worker
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: worker
          image: briankmatheson/sophistry-worker:0.9.18
---
apiVersion: v1
kind: Service
metadata:
  name: sophistry-worker
  namespace: sophistry
spec:
  selector:
    app: sophistry-worker
  ports:
    - port: 80
      targetPort: 8000
